# tsfm-anomaly-bench

./: .gitignore  README.md  pyproject.toml  smd.py:Zone.Identifier
blog/: part-1.md
notebooks/: 01_data_exploration.ipynb
scripts/: download_smd.sh
src/data/: smd.py
src/evaluation/: metrics.py
src/experiments/: run_iforest.py
src/models/: base.py  iforest.py
