[project]
name = "tsfm-anomaly-bench"
version = "0.1.0"
description = "Benchmark of time-series foundation models against classical baselines on SMD."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "torch>=2.2",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "wandb>=0.16",
]

[dependency-groups]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "B", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
